<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Week2 Challenge</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_lable">Login. Here we go!</string>
    <string name="hint_email_address">E-mail address</string>
    <string name="hint_password">Password</string>
    <string name="label_forgot_password">I forgot my password</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="login_button_text">Login</string>

</resources>
